# parquet-viewer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
www/: build-ui  dev_server.js  index.html  index.js  package-lock.json  package.json
www/elm-src/src/: Main.elm
www/scripts/: build-ui  dev_server.js
